--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,19 @@
     .bannerContainer {
       display: flex;
       flex-direction: column;
-      height: 100px;
+      height: 130px;
       width: 100%;
       align-items: center;
       justify-content: space-around;
       border-bottom: 2px solid lightgrey;
       margin-bottom: 50px;
+      background-color: white;
+    }
+    .pinkBanner {
+      background-color: #a95490;
+      text-align: center;
+      color: white;
+      width: 100%;
     }
     .banner {
       font-family: 'Yeseva One', cursive;
@@ -40,7 +47,7 @@
       display: flex;
       position: absolute;
       left: 10vw;
-      top: 15px;
+      top: 35px;
       width: 400px;
       flex-direction: row;
       justify-content: space-around;
@@ -49,15 +56,30 @@
       display: flex;
       position: absolute;
       right: 15vw;
-      top: 15px;
+      top: 35px;
       width: 300px;
       flex-direction: row;
       justify-content: space-around;
+    }
+    .footer {
+      display: flex;
+      flex-direction: row;
+      height: 60px;
+      width: 100%;
+      align-items: flex-start;
+      justify-content: space-around;
+      border-top: 2px solid lightgrey;
+      margin-top: 50px;
+      padding-top: 10px;
+      background-color: white;
     }
   </style>
 </head>
 <body>
   <div class="bannerContainer">
+    <div class="pinkBanner">
+      Spread Love! Complimentary Diamond Earrings with Purchase over $1,000
+    </div>
     <div class="leftFloat">
       <div class="bLink">
         800.691.0952
@@ -109,6 +131,20 @@
   </div>
   <div id="gallery"></div>
   <div id="customerReviews"></div>
+  <div class="footer">
+    <div class="bLink">
+      About
+    </div>
+    <div class="bLink">
+      Customer Care
+    </div>
+    <div class="bLink">
+      Contact
+    </div>
+    <div class="bLink">
+      Newsletter
+    </div>
+  </div>
 
   <script src="http://localhost:3030/bundle.js"></script>
   <script src="http://localhost:3004/bundle.js"></script>
