--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" type="text/css" href="http://ec2-18-216-180-46.us-east-2.compute.amazonaws.com:3004/style.css">
+  <link rel="stylesheet" type="text/css" href="http://34.228.73.56:3000/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css" >
@@ -80,5 +80,5 @@
   </div>
 
   <script src="http://ec2-18-216-180-46.us-east-2.compute.amazonaws.com:3030/bundle.js"></script>
-  <script src="http://ec2-18-216-180-46.us-east-2.compute.amazonaws.com:3004/bundle.js"></script>
+  <script src="http://34.228.73.56:3000/bundle.js"></script>
 </body>
